// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author Tile should render Default 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
  >
    <div
      class="css-1dskvzn eyyziki0"
    />
    <div
      class="css-0 eyyziki1"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      />
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithClassName 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways extra-classname css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
  >
    <div
      class="css-1dskvzn eyyziki0"
    />
    <div
      class="css-0 eyyziki1"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      />
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithEmotion 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
  >
    <div
      class="css-1dskvzn eyyziki0"
    />
    <div
      class="css-0 eyyziki1"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      />
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithoutImage 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
  >
    <div
      class="css-1dskvzn eyyziki0"
    />
    <div
      class="css-0 eyyziki1"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      />
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithoutJobTitle 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
  >
    <div
      class="css-1dskvzn eyyziki0"
    />
    <div
      class="css-0 eyyziki1"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      />
    </div>
  </a>
</DocumentFragment>
`;
